# WEB_HW_8

./: config.ini  consumer.py  main.py  models.py  models_2.py  producer.py  pyproject.toml
