[tool.poetry]
name = "web-hw-8"
version = "0.1.0"
description = ""
authors = ["m0wgli <rodiontiutiunyk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_hw_8"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.4.1"
redis = "^4.6.0"
pika = "^1.3.2"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
